netshoot-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: otel-lab
spec:
  nodeName: ip-10-0-3-223.us-east-2.compute.internal
  hostPID: true
  hostNetwork: true
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["sleep", "3600"]
    securityContext:
      privileged: true
    volumeMounts:
    - name: host
      mountPath: /host
  volumes:
  - name: host
    hostPath:
      path: /
  tolerations:
  - operator: Exists
